# irig_unix_timecodes

./: .gitignore  CLAUDE.md  HOW_TO_USE.md  LICENSE  README.md  SUMMARY.md  TUTORIAL.md  bin_analysis.py  desetup.sh  extract_from_camera_events.py  extract_from_dat.py  extract_from_dat2.py  irig_h_gpio.py  irig_sender.c  make_timecodes.py  mock_analysis.py  mock_results.csv  mock_timing_errors.npz  notebook.ipynb  notebook2.ipynb  npz_analysis.py  pyproject.toml  read_ni_py.py  setup.sh  test_irig_h.py  test_loop_timing.c  timecode_generators.py
docs/: generate_irig_h_figure.py  irig-h-standard.md
matlab/: ClockTable.m  decode_irig.m
matlab/+nk_internal/: read_npy.m  read_npz.m
neurokairos/: __init__.py  bin_analysis.py  clock_table.py  decoder.py  events.py  extract_from_camera_events.py  extract_from_dat.py  irig.py  irig_h_gpio.py  npz_analysis.py  sglx.py  ttl.py  video.py
neurokairos/decoders/: __init__.py  decoder.py  events.py  irig.py  report.py  sglx.py  ttl.py  video.py
raspberry_pi/docs/: setup-guide.md  timing-loop.md
raspberry_pi/scripts/: install.sh  install_chrony_client.sh  test_chrony.sh  uninstall.sh
raspberry_pi/sender/: Makefile
scripts/: install.sh  install_chrony_server.sh
sender/: irig_sender.c  test_mock_sender.py
systemctl/: irig-sender.service  irig_unix_timecodes.service
systemd/: irig-sender.service
tests/: conftest.py  test_clock_table.py  test_dat_decoder.py  test_decoder.py  test_events.py  test_intervals.py  test_irig.py  test_irig_h.py  test_matlab.py  test_report.py  test_sglx.py  test_ttl.py  test_video.py
